fix(filesUi): fix overflow issues for long file/folder names

--- a/components/views/files/filepath/Filepath.less
+++ b/components/views/files/filepath/Filepath.less
@@ -3,11 +3,17 @@
     align-items: center;
   }
   a {
+    display: block; // elipsis only works on block elements
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 200px;
     &:extend(.font-accent);
     &:hover {
       &:extend(.font-accent);
     }
   }
+
   li + li::before {
     &:extend(.font-primary);
   }
